# opencv_study

./: CMakeLists.txt  README.md
src/: docs  test.cpp
src/chapter5/: c5t1.cpp  c5t2.cpp  c5t3.cpp  c5t4.cpp  c5t5.cpp
src/domainsocket/: client.c  server.c
src/include/: constants.h
src/include/test/: colordetector.h
src/test/: colordetector.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp
src/tools/: maptool.cpp  matdraw.cpp  tool.cpp
